fixing spacing issue on post

--- a/_sass/pages/single_post.scss
+++ b/_sass/pages/single_post.scss
@@ -162,3 +162,7 @@ article .post-meta {
     }
   }
 }
+
+#imagine-a-world-where-simulations-are-simply--simpl {
+  margin-top: 50px;
+}
